--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,51 @@
-test one two
+<div class="container-fluid overflow-hidden">
+  <div class="row pt-5">
+    <div class="col"></div>
+    <div class="col">
+    	<h3 class="text-center">JFrog Demo</h3>
+      <form #request="ngForm" (ngSubmit)="getResults(request)" class="pt-3">
+        <div class="form-group">
+          <label for="url">URL</label>
+          <input type="text" class="form-control" id="url" placeholder="e.g., jfrog.org or 31.33.99.104" name="url" #url="ngModel" ngModel required>
+        </div>
+        <div class="form-group">
+          <label for="repo">Repository</label>
+          <input type="text" class="form-control" id="repo" placeholder="Repository name" name="repo" #repo="ngModel" ngModel required>
+        </div>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" placeholder="Used for basic authentication" name="username" #username="ngModel" ngModel required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Cannot be blank" name="password" #password="ngModel" ngModel required>
+        </div>
+        <button type="submit" class="btn btn-outline-primary">Submit</button>
+      </form>
+    </div>
+    <div class="col"></div>
+  </div>
+  <div class="row pt-3" *ngIf="!results">
+    <div class="col-md-3"></div>
+    <div class="col text-center">
+      <h3>Results</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">File</th>
+            <th scope="col">Total Downloads</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
