--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="col"></div>
   </div>
-  <div class="row pt-3" *ngIf="!results">
+  <div class="row pt-3" *ngIf="results">
     <div class="col-md-3"></div>
     <div class="col text-center">
       <h3>Results</h3>
@@ -38,10 +38,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
+          <tr *ngFor="let file of files; index as i">
+            <th scope="row">{{ i }}</th>
+            <td>{{ file.name }}</td>
+            <td>{{ file.downloadCount }}</td>
           </tr>
         </tbody>
       </table>
