--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,6 +67,7 @@
     <div class="col-md-3"></div>
     <div class="col text-center">
       <h3>Results</h3>
+      <button type="button" class="btn btn-sm btn-outline-primary" (click)="reset()">Restart</button>
       <table class="table mb-2">
         <thead>
           <tr>
