--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,6 +68,10 @@
     <div class="col text-center">
       <h3>Results</h3>
       <button type="button" class="btn btn-sm btn-outline-primary" (click)="reset()">Restart</button>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="interview" value="true">
+        <label class="form-check-label" for="interview">Display most and second most popular files only</label>
+      </div>
       <table class="table mb-2">
         <thead>
           <tr>
