--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,8 +47,8 @@
           </div>
         </div>
         <button type="submit" class="btn btn-outline-primary" *ngIf="!searching">Submit</button>
-        <div class="spinner-border text-secondary" role="status" *ngIf="searching">
-          <span class="sr-only"></span>
+        <div class="spinner-border text-primary" role="status" *ngIf="searching">
+          <button class="btn btn-outline-primary"><span class="sr-only"></span></button>
         </div>
       </form>
     </div>
